--- a/html/index.html
+++ b/html/index.html
@@ -28,18 +28,20 @@
       </div>
 
       <!-- right content-container -->
+      <div class="circle"></div>
+
       <div class="right-content-container">
         <div class="home-container">
           <h1>Have fun at work today!</h1>
         </div>
         <div class="form-container hidden">
-          <form action="../html/main.html">
+          <form>
             <h1>Login</h1>
             <label for="name">Employee ID:</label>
             <input type="text" id="name" placeholder="admin" required />
             <label for="password">Password:</label>
             <input type="password" id="password" placeholder="admin" required />
-            <button class="form-btn">Login</button>
+            <a href="../html/main.html" class="form-btn">Login</a>
           </form>
         </div>
       </div>
